Implement author collection and API
