# swagger.json
@@ -14,7 +14,201 @@
   "paths": {
     "/books": {
       "get": {
-        "summary": "Get one book by Id"
+        "summary": "Get all books"
+      }
+    },
+    "/books/{id}": {
+      "get": {
+        "summary": "Get one book by Id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/authors": {
+      "get": {
+        "summary": "Get all authors",
+        "tags": [
+          "Authors"
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of authors"
+          },
+          "500": {
+            "description": "Unable to retrieve authors"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create an author",
+        "tags": [
+          "Authors"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id",
+                  "name",
+                  "birthYear"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  },
+                  "birthYear": {
+                    "type": "number"
+                  }
+                }
+              },
+              "example": {
+                "id": "a4",
+                "name": "Example Author",
+                "birthYear": 1980
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Author created"
+          },
+          "400": {
+            "description": "Missing required fields or author ID already exists"
+          },
+          "500": {
+            "description": "Unable to create author"
+          }
+        }
+      }
+    },
+    "/authors/{id}": {
+      "get": {
+        "summary": "Get author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A single author"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "500": {
+            "description": "Unable to retrieve author"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update an author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name",
+                  "birthYear"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "birthYear": {
+                    "type": "number"
+                  }
+                }
+              },
+              "example": {
+                "name": "Updated Author",
+                "birthYear": 1981
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Author updated"
+          },
+          "400": {
+            "description": "Missing required author fields"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "500": {
+            "description": "Unable to update author"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete an author by ID",
+        "tags": [
+          "Authors"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Author deleted"
+          },
+          "400": {
+            "description": "Author still has books"
+          },
+          "404": {
+            "description": "Author not found"
+          },
+          "500": {
+            "description": "Unable to delete author"
+          }
+        }
       }
     }
   },
